--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -23,33 +23,159 @@
             <h2 class="text-center mt-5"> Select your required service </h2>
 
             <div class="row mt-4 content-box">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card text-center">
                         <div class="card-body">
                             <img src="../../images/cleaning.png" alt="Service Icon" class="service-icon">
-                            <a href="./services" class="btn btn-outline-success service-btn"><b>Cleaning Services</b></a>
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Cleaning Services</b></a>
                             <p class="mt-3"><i>High-quality cleaning services to make your place shine.</i></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card text-center">
                         <div class="card-body">
                             <img src="../../images/header.png" alt="Service Icon" class="service-icon">
-                            <a href="./services" class="btn btn-outline-success service-btn"><b>Repair & Maintenance</b></a>
-                            <p class="mt-3"><i>Expert repair and maintenance for any need.</i></p>
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Repair & Maintenance</b></a>
+                            <p class="mt-3"><i>Expert repair and maintenance for your needs.</i></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card text-center">
                         <div class="card-body">
                             <img src="../../images/plumbing.png" alt="Service Icon" class="service-icon">
-                            <a href="./services" class="btn btn-outline-success service-btn"><b>Plumbing Services</b></a>
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Plumbing Services</b></a>
                             <p class="mt-3"><i>Professional plumbing services for any issues or installations.</i></p>
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/electrical.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Electrical Work</b></a>
+                            <p class="mt-3"><i>Replace, repair or maintain your electrical equipment.</i></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4 content-box">
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/floor.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Floor Installation</b></a>
+                            <p class="mt-3"><i>Fast and easy fitting of your desired floor designs.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/fixture.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Fixture Installation</b></a>
+                            <p class="mt-3"><i>Hang your decors with trusted workmanship.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/light.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Light Installation</b></a>
+                            <p class="mt-3"><i>Let trained professionals safely install your light bulbs.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/painting.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Professional Painting</b></a>
+                            <p class="mt-3"><i>Fast and trained painters to colour your walls.</i></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4 content-box">
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/surveyor.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Site Survey</b></a>
+                            <p class="mt-3"><i>Hire professionals to give insights on your project site</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/design.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Interior Build Outs</b></a>
+                            <p class="mt-3"><i>Customise your commercial space for your business needs.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/milling.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Mill Work</b></a>
+                            <p class="mt-3"><i>Construct and install millworks at your convenience.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/brick.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Wall Repair</b></a>
+                            <p class="mt-3"><i>Get professional with repairing the holes and damage in your wall.</i></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4 content-box">
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/graphics.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Graphics</b></a>
+                            <p class="mt-3"><i>Consult experienced designers to get your desired graphics.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/renovation.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Renovations</b></a>
+                            <p class="mt-3"><i>Finish up your incomplete renovations in a timely manner.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/carpentary.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Carpentary</b></a>
+                            <p class="mt-3"><i>Transform your space with expert carpenter services.</i></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <img src="../../images/up.png" alt="Service Icon" class="service-icon">
+                            <a href="./services" class="btn btn-outline-success service-btn toggle-button"><b>Decor Upgrade</b></a>
+                            <p class="mt-3"><i>Build and modify your unique decors with exceptional builders.</i></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <a href="./request.html" class="btn btn-success next-button"><b>Next</b></a>
             </div>
         </section>
     </main>
@@ -65,5 +191,22 @@
   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          let buttons = document.querySelectorAll(".toggle-button");
+      
+          buttons.forEach(function (button) {
+            button.addEventListener("click", function (event) {
+              event.preventDefault(); // Prevent the link action
+      
+              if (this.classList.contains("selected-service")) {
+                this.classList.remove("selected-service");
+              } else {
+                this.classList.add("selected-service");
+              }
+            });
+          });
+        });
+      </script>
 </body>
 </html>
