Request + Map Pages Update
Request Page
1) Allow for users to upload 1 image
2) display of image
3) Allow for user to user preferred timing
4) Press next -> triggers loading until Service Provider is found (for now i just set timing to move on to next page)

Map Page
1) display map using API key
2) confirmation of service button that navigates to the next page

--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -20,6 +20,7 @@
 
     <main>
         <section class="bg-light py-5">
+
             <h2 class="text-center mt-5"> Select your required service </h2>
 
             <div class="row mt-4 content-box">
@@ -175,7 +176,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="./request.html" class="btn btn-success next-button"><b>Next</b></a>
+                <a href="./request.html" class="btn btn-success next-button"><b>NEXT</b></a>
             </div>
         </section>
     </main>
@@ -205,5 +206,6 @@
                 });
             });
     </script>
+    
 </body>
 </html>
