Fixed the shrinking and zoom problem for services + request page

--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -25,44 +25,45 @@
             <h2 class="text-center mt-5">Provide us with more details</h2>
 
             <div class="row mt-4 content-box">
-              <div class="col-md-8">
-                <!-- Image Upload Container -->
-                <div class="image-upload-container card-like mb-4">
-                    <div class="row">
-                        <div class="col-md-6 text-center d-flex flex-column justify-content-center">
-                            <h2 id="upload-title">Attach a picture</h2>
+              <div class="col-12 col-md-8"> <!-- Changed to col-12 for small screens and col-md-8 for medium and up -->
+                  <!-- Image Upload Container -->
+                  <div class="image-upload-container card-like mb-4">
+                      <div class="row">
+                          <div class="col-12 col-md-6 text-center d-flex flex-column justify-content-center">
+                            <h1>Attach a picture</h1>
                             <h3>
                               Please upload clear photos for a quick handyman selection
                             </h3>
-                        </div>
-                        <div class="col-md-6 text-center d-flex flex-column align-items-center justify-content-between">
-                          <div id="imagePreview" class="image-preview mt-3"></div>
-                          <input type="file" id="imageUpload" accept="image/*" class="d-none">
-                          <button id="uploadButton" class="upload-button mt-3">Upload Image</button>
+                          </div>
+                          <div class="col-12 col-md-6 text-center d-flex flex-column align-items-center justify-content-between">
+                            <div id="imagePreview" class="image-preview mt-3"></div>
+                            <input type="file" id="imageUpload" accept="image/*" class="d-none">
+                            <button id="uploadButton" class="upload-button mt-3">Upload Image</button>
+                          </div>
                       </div>
-                    </div>
-                </div>
-                <!-- Choose Timing Container -->
-                <div class="image-upload-container card-like mb-4">
-                    <div class="row">
-                      <div class="col-md-6 text-center d-flex flex-column justify-content-center">
-                        <h2 id="upload-title">Choose a Timing</h2>
-                        <h3>
-                          Please upload clear photos for a quick handyman selection
-                        </h3>                      
+                  </div>
+                  <!-- Choose Timing Container -->
+                  <div class="image-upload-container card-like mb-4">
+                      <div class="row">
+                          <div class="col-12 col-md-6 text-center d-flex flex-column justify-content-center">
+                            <h1>Choose a Timing</h1>
+                            <h3>
+                              Please upload clear photos for a quick handyman selection
+                            </h3>  
+                          </div>
+                          <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column justify-content-center">
+                            <button class="btn btn-outline-success timing-button"><b>8am to 11am</b></button>
+                            <button class="btn btn-outline-success timing-button"><b>12pm to 3pm</b></button>
+                            <button class="btn btn-outline-success timing-button"><b>4pm to 7pm</b></button>
+                          </div>
                       </div>
-                      <div class="col-md-6 mt-5 text-center d-flex flex-column justify-content-center">
-                        <button class="btn btn-outline-success timing-button"><b>8am to 11am</b></button>
-                        <button class="btn btn-outline-success timing-button"><b>12pm to 3pm</b></button>
-                        <button class="btn btn-outline-success timing-button"><b>4pm to 7pm</b></button>
-                    </div>
-                    </div>
-                </div>
-            </div>
-                <div class="col-md-4">
-                    <img src="../../images/plumberman.png" alt="Man Image" class="img-fluid">
-                </div>
-            </div>
+                  </div>
+              </div>
+          
+              <div class="col-12 col-md-4"> <!-- Changed to col-12 for small screens and col-md-4 for medium and up -->
+                <img src="../../images/plumberman.png" alt="Man Image" class="img-fluid">
+              </div>
+          </div>
             
             
             <div class="text-center mt-5">
