Hover button colour and map size
Fixing Request Hover buttons + adjust Map size according to viewport

--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -67,7 +67,7 @@
             
             
             <div class="text-center mt-5">
-              <a href="./map.html" class="btn btn-success next-button"><b>I NEED HELP</b></a>
+              <a href="./map.html" class="btn btn-success upload-button"><b>I NEED HELP</b></a>
             </div>
           </section>
     </main>
