--- a/Frontend/templates/styles/map.css
+++ b/Frontend/templates/styles/map.css
@@ -1,9 +1,10 @@
 #map {
-    height: 400px;
     width: 100%;
+    height: 50vh;  /* 50% of the viewport height */
 }
 
 .confirm-button {
     background-color: #2AC0A5;
     width: 300px;
+    max-width: 100%; /* Makes sure the button doesn't overflow on smaller screens */
 }
