--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -3,31 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+    <title>Confirmation</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/services.css">
     <link rel="stylesheet" href="../styles/request.css">
     <link rel="stylesheet" href="../styles/map.css">
+    <style>
+       
+        .navbar-brand-container {
+            margin-left: 20px;
+        }
+
+        .content-box {
+            padding: 20px;
+        }
+
+        .green-box {
+            background-color: #30e7c6;
+            border-radius: 15px;
+            padding: 20px;
+            max-width: 100%;
+            max-height: 200px; 
+            overflow: hidden; 
+        }
+
+        .green-box p {
+            margin: 0;
+            font-size: 1.5em;
+            font-weight: 500;
+            text-align: left;
+        }
+
+        .custom-link {
+            color: #27a891;
+            text-align: center;
+        }
+
+        
+        @media (max-width: 768px) {
+            .content-box {
+                padding: 10px;
+            }
+
+            .green-box {
+                padding: 10px;
+                max-height: 150px; 
+            }
+
+            .green-box p {
+                font-size: 1.2em;
+            }
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="./index.html">
-            <b>Servify</b>
-        <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-        </a>
-    </div>
+        <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
+            <a class="navbar-brand navbar-brand-container" style="color: white" href="./index.html">
+                <b>Servify</b>
+                <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            </a>
+        </div>
     </nav>  
 
     <main>
         <section class="bg-light py-5">
-            <h2 class="text-center mt-5">Confirmation that you have received our service!</h2>
+            <h2 class="text-center mt-5">YOU HAVE CONFIRMED THE ORDER!</h2>
+    
+            <div class="row mt-4 content-box">
+                <div class="col-md-8">
+                    <!-- Confirmation Details Container -->
+                    <div class="green-box card-like mb-4">
+                        <div class="row">
+                            <div class="col-md-6 text-container">
+                                <div>
+                                    <p><u>Confirmed</u></p>
+                                    <p>Name</p>
+                                    <p>Price</p>
+                                    <p>Serviced</p>
+                                </div>
+                                <a href="./index.html" class="custom-link">View Order</a>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <div class="image-container">
+                                        <img src="../../images/renovation.png" alt="Image" class="img-fluid">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Request Details Container -->
+                    <div class="green-box card-like mb-4">
+                        <div class="row">
+                            <div class="col-md-6 text-container">
+                                <div>
+                                    <p><u>Request</u></p>
+                                    <p>Service Requested:</p>
+                                    <p>Time:</p>
+                                    <p>Location:</p>                     
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <img src="../../images/plumberman.png" alt="Man Image" class="img-fluid">
+                </div>
+            </div>
+        </section>
     </main>
 
-
-    <footer class="bg-dark text-white">
-        <div class="container-fluid" style="padding: 5px ;">
+    <footer class="bg-dark text-white footer">
+        <div class="container-fluid" style="padding: 5px;">
             <div>
                 <h5 class="text-center"><b>Servify</b></h5>
                 <p class="text-center"><i>Your one-stop solution for professional services.</i></p>
