--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <!-- <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/services.css">
     <link rel="stylesheet" href="../styles/request.css">
-    <link rel="stylesheet" href="../styles/map.css">
+    <link rel="stylesheet" href="../styles/map.css"> -->
     <style>
        
         .navbar-brand-container {
