add time slot calculator

--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -87,52 +87,6 @@
   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.getElementById("imageUpload").addEventListener("change", function() {
-      const file = this.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(event) {
-            document.getElementById("imagePreview").innerHTML = `<img src="${event.target.result}" alt="Uploaded Image">`;
-        }
-        reader.readAsDataURL(file);
-      }
-      });
-
-      document.getElementById("uploadButton").addEventListener("click", function() {
-      document.getElementById("imageUpload").click();
-      });
-
-
-      document.addEventListener("DOMContentLoaded", function () {
-        let timingButtons = document.querySelectorAll(".timing-button");
-        timingButtons.forEach(function (button) {
-          button.addEventListener("click", function (event) {
-            event.preventDefault(); // Prevent the link action
-            timingButtons.forEach((btn) => btn.classList.remove("selected-timing"));
-          this.classList.add("selected-timing");
-          });
-        });
-      });
-
-
-      //Javascript for the loading button
-      document.addEventListener("DOMContentLoaded", function () {
-        const nextButton = document.querySelector(".next-button");
-        const loadingPopup = document.getElementById("loading-popup");
-
-        nextButton.addEventListener("click", function(event) {
-        event.preventDefault(); // Prevent the link action
-        loadingPopup.style.display = "flex"; // Show the loading popup
-
-        //change this such that only when there is serviceprovider acceptance then move to next page
-        setTimeout(function() {
-          // Hide the loading popup and navigate to map.html after 2 seconds
-          loadingPopup.style.display = "none";
-          window.location.href = "./map.html";
-          }, 2000);
-        });
-      });
-    </script>
+    <script src="../script/request.js"></script>
 </body>
 </html>
