--- a/Frontend/templates/pages/map.html
+++ b/Frontend/templates/pages/map.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/homepage.css">
     <link rel="stylesheet" href="../styles/services.css">
     <link rel="stylesheet" href="../styles/request.css">
     <link rel="stylesheet" href="../styles/map.css">
