--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <title>Request</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../styles/index.css">
-  <link rel="stylesheet" href="../styles/services.css">
   <link rel="stylesheet" href="../styles/request.css">
 </head>
 
@@ -65,7 +63,6 @@
                               <span class="btn btn-outline-success timing-button"><b>4pm to 7pm</b></span>
                             </label>
                           </div>
-                          <button id="submitButton" type="submit" disabled>Submit</button>
                       </div>
                   </div>
               </div>
@@ -76,7 +73,7 @@
           </div>
             
             <div class="text-center mt-5">
-              <a href="./map.html" class="btn btn-success upload-button"><b>I NEED HELP</b></a>
+              <a href="./map.html" class="btn btn-success upload-button" disabled><b>I NEED HELP</b></a>
             </div>
           </section>
     </main>
