--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -73,7 +73,7 @@
           </div>
             
             <div class="text-center mt-5">
-              <a href="./map.html" class="btn btn-success upload-button" id="submitBtn" disabled><b>I NEED HELP</b></a>
+              <a href="./map.html" class="btn btn-success submit-button" id="submitButton" disabled><b>I NEED HELP</b></a>
             </div>
           </section>
     </main>
