--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -206,6 +206,8 @@
                 });
             });
     </script>
+    <script src="../scripts/services.js" defer></script>
+
     
 </body>
 </html>
