--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -206,7 +206,15 @@
                 });
             });
     </script>
-    <script src="../scripts/services.js" defer></script>
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+
+    <!-- If you enabled Analytics, add this Firebase SDK for Analytics -->
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+
+
+    <script src="../script/services.js" type="module"></script>
 
     
 </body>
