--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -75,7 +75,7 @@
           </div>
             
             <div class="text-center mt-5">
-              <a href="./map.html" class="btn btn-success submit-button" id="submitButton" disabled><b>I NEED HELP</b></a>
+              <a class="btn btn-success submit-button" id="submitButton" disabled><b>I NEED HELP</b></a>
             </div>
           </section>
     </main>
@@ -96,6 +96,7 @@
   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="../script/request.js"></script>
     
 </body>
