setup timeslot calc and mandatory fields

--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -51,16 +51,13 @@
                           </div>
                           <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column justify-content-center">
                           <label>
-                            <input type="radio" name="timing" value="8am to 11am" required>
-                              8am to 11am
+                            <input type="radio" name="timing" value="" required>
                           </label>
                           <label>
-                          <input type="radio" name="timing" value="12pm to 3pm" required>
-                          12pm to 3pm
+                          <input type="radio" name="timing" value="" required>
                           </label>
                           <label>
                           <input type="radio" name="timing" value="4pm to 7pm" required>
-                          4pm to 7pm
                           </label>
                           </div>
 
@@ -75,7 +72,7 @@
           </div>
             
             <div class="text-center mt-5">
-              <a class="btn btn-success submit-button" id="submitButton" disabled><b>I NEED HELP</b></a>
+              <a class="btn btn-success submit-button" id="submitButton" href="map.html" disabled><b>I NEED HELP</b></a>
             </div>
           </section>
     </main>
