--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -51,13 +51,13 @@
                           </div>
                           <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column justify-content-center">
                           <label>
-                            <input type="radio" name="timing" value="" required>
+                            <input type="radio" name="timing" required>
                           </label>
                           <label>
-                          <input type="radio" name="timing" value="" required>
+                          <input type="radio" name="timing"required>
                           </label>
                           <label>
-                          <input type="radio" name="timing" value="4pm to 7pm" required>
+                          <input type="radio" name="timing"required>
                           </label>
                           </div>
 
