--- a/Frontend/templates/styles/request.css
+++ b/Frontend/templates/styles/request.css
@@ -2,8 +2,9 @@
   width: 100%;  /* Takes up the full width of its container */
   height: auto;  /* Adjusts height dynamically */
   box-shadow: 0px 20px 50px rgba(29, 117, 101, 0.30);
-  padding: 15px;
+  padding: 40px;
   border-radius: 5px;
+  margin-left: 40px ;
 }
 
 /* Media query to adjust the height for smaller screens */
