make request page tidy

--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -25,6 +25,7 @@
             <div class="row mt-4 content-box">
               <div class="col-12 col-md-8"> <!-- Changed to col-12 for small screens and col-md-8 for medium and up -->
                   <!-- Image Upload Container -->
+                  <div class ="everything">
                   <div class="image-upload-container card-like mb-4">
                       <div class="row">
                           <div class="col-12 col-md-6 text-center d-flex flex-column justify-content-center">
@@ -64,12 +65,11 @@
                       </div>
                   </div>
               </div>
-          
               <div class="col-12 col-md-4"> <!-- Changed to col-12 for small screens and col-md-4 for medium and up -->
                 <img src="../../images/plumberman.png" alt="Man Image" class="img-fluid">
               </div>
-          </div>
-            
+          </div> 
+        </div>
             <div class="text-center mt-5">
               <a class="btn btn-success submit-button" id="submitButton" href="map.html" disabled><b>I NEED HELP</b></a>
             </div>
