--- a/Frontend/templates/pages/provider.html
+++ b/Frontend/templates/pages/provider.html
@@ -6,69 +6,6 @@
     <title>Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/index.css">
-    <style>
-       
-        .navbar-brand-container {
-            margin-left: 20px;
-        }
-
-        .content-box {
-            padding: 20px;
-        }
-
-        .green-box {
-            background-color: #30e7c6;
-            border-radius: 15px;
-            padding: 20px;
-            max-width: 50%;
-            max-height: 500px; 
-            overflow: hidden; 
-            margin-top:100px;
-            margin-left:50px;
-        }
-
-        .green-box p {
-            margin: 0;
-            font-size: 1.5em;
-            font-weight: 500;
-            text-align: left;
-        }
-        .col-md-4 {
-            max-width: 70%;
-            box-sizing: border-box;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-        }
-
-        
-        @media (max-width: 768px) {
-            .content-box {
-                padding: 10px;
-            }
-
-            .green-box {
-                padding: 10px;
-                max-height: 150px; 
-            }
-
-            .green-box p {
-                font-size: 1.2em;
-            }
-        }
-        .col-md-4{
-            
-        }
-        .accept-req{
-            display: flex;
-            margin-left: 20px;
-        }
-
-        
-
-
-    </style>
     
 </head>
 <body>
@@ -85,6 +22,7 @@
     </nav> 
 
     <main>
+    <div class="everything">
     <div class="green-box card-like mb-4">
         <div class="row">
             <div class="col-md-6 text-container">
@@ -111,7 +49,7 @@
     <img src="../../images/plumberman.png" alt="Man Image" class="img-fluid">
 </div>
 </div>
-</section>
+</div>
 </main>
 <footer class="bg-dark text-white footer">
     <div class="container-fluid" style="padding: 5px;">
