--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../styles/confirmation.css">
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
