--- a/Frontend/templates/styles/provider.css
+++ b/Frontend/templates/styles/provider.css
@@ -1,22 +1,24 @@
 .everything{
-    grid: area 1px / 1px / 1px / 1px;;
+    grid-area : 1px / 1px / 1px / 1px;
   }
+
 .navbar-brand-container {
     margin-left: 20px;
 }
-
 .content-box {
     padding: 20px;
 }
-
+.accept-req{
+    grid-area: 1px / 2px ;
+    justify-content: left;
+}
 .green-box {
     background-color: #30e7c6;
     border-radius: 15px;
     padding: 20px;
     max-width: 50%;
     max-height: 500px; 
-    overflow: hidden; 
-    margin-top:100px;
+    margin-top:150px;
     margin-left:50px;
 }
 
