--- a/Frontend/templates/styles/provider.css
+++ b/Frontend/templates/styles/provider.css
@@ -1,24 +1,21 @@
 .everything{
-    grid-area : 1px / 1px / 1px / 1px;
+    display: grid;
+    grid-area: ;
   }
-
 .navbar-brand-container {
     margin-left: 20px;
 }
 .content-box {
     padding: 20px;
 }
-.accept-req{
-    grid-area: 1px / 2px ;
-    justify-content: left;
-}
+
 .green-box {
     background-color: #30e7c6;
     border-radius: 15px;
     padding: 20px;
     max-width: 50%;
-    max-height: 500px; 
-    margin-top:150px;
+    max-height: 700px; 
+    margin-top:100px;
     margin-left:50px;
 }
 
@@ -55,9 +52,10 @@
 
 .accept-req{
     display: flex;
-    margin-left: 20px;
 
+    margin-left: 20px;
 }
+
 
 
 
