--- a/Frontend/templates/styles/provider.css
+++ b/Frontend/templates/styles/provider.css
@@ -1,33 +1,24 @@
-.navbar-brand-container {
-    margin-left: 20px;
-}
-
-.everything{
-    grid-area: 1/1/1/1;
-
-
-  }
-
-.green-box {
-    background-color: #30e7c6;
-    border-radius: 15px;
+.card-like {
+    width: 100%;  /* Takes up the full width of its container */
+    height: auto;  /* Adjusts height dynamically */
+    box-shadow: 0px 20px 50px rgba(29, 117, 101, 0.30);
     padding: 20px;
-    max-width: 800px;
-    max-height: 700px; 
-    margin-top:100px;
-    margin-left:50px;
-}
-
-.green-box p {
-    margin: 10px;
-    font-size: 1.5em;
-    font-weight: 500;
-    text-align: left;
-}
-
+    border-radius: 15px;
+    margin-left: 50px;
+    margin-top: 50px;
+  }
 .accept-req{
-    display: flex;
-    margin-left: 20px;
+    margin-left: 250px;
+}
+  
+h1 {
+    font-weight: bold; /* Makes the text bolder */
+    margin-bottom: 20px; /* Adds a 20px gap below the h1 */
+  }
+.image-upload-container{
+    width:  700px;
+    height
+    
 }
 
 
