--- a/Frontend/templates/pages/provider.html
+++ b/Frontend/templates/pages/provider.html
@@ -22,17 +22,20 @@
     </nav> 
 
 <main>
-    <div class="everything">
-        <div class="green-box card-like mb-4">
-            <div class="col-md-6 text-container">
-                <div>
-                    <p><u>Order <Details></Details></u></p>
-                    <p>Service Requested:</p>
-                    <p>Time:</p>
-                    <p>Location:</p>                     
-                </div>
-            </div>
-            <div class = "accept-req justify-content-center">
+    <section class="bg-light py-5">
+        <h2 class="text-center mt-5">Do you want to accept the order?</h2>
+
+        <div class="row mt-4 content-box">
+          <div class="col-12 col-md-8"> <!-- Changed to col-12 for small screens and col-md-8 for medium and up -->
+              <div class="image-upload-container card-like mb-4">  
+                        <h1>Order Details</h1>
+                        <h3>Service Requested:</h3>
+                        <h3>Timing:</h3>
+                        <h3>Location:</h3>
+              </div>
+
+              <div class="image-upload-container mb-4">
+              <div class="accept-req"
                 <a href="#" class="btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="50" fill="green" class="bi bi-check-circle-fill" viewBox="0 0 22 16">
                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
@@ -43,12 +46,15 @@
                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
               </svg>
             </a>
-            </div>    
-        </div>
-        <div class="col-md-4">
+            </div>
+            </div>
+            </div>
+          <div class="col-12 col-md-4"> <!-- Changed to col-12 for small screens and col-md-4 for medium and up -->
             <img src="../../images/plumberman.png" alt="Man Image" class="img-fluid">
-        </div>
+          </div> 
     </div>
+
+      </section>
 </main>
 
 <footer class="bg-dark text-white footer">
