--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -53,12 +53,15 @@
                           <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column justify-content-center">
                           <label>
                             <input type="radio" name="timing" required>
+                            <span class="time-slot"></span>
                           </label>
                           <label>
-                          <input type="radio" name="timing"required>
+                            <input type="radio" name="timing" required>
+                            <span class="time-slot"></span>
                           </label>
                           <label>
-                          <input type="radio" name="timing"required>
+                            <input type="radio" name="timing" required>
+                            <span class="time-slot"></span>
                           </label>
                           </div>
                         </div>
@@ -93,7 +96,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="../script/request.js"></script>
+    <script src="../script/request.js" type="module"></script>
     
 </body>
 </html>
