--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -5,6 +5,9 @@
   <title>Request</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/request.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 
 
@@ -21,6 +24,8 @@
     <main>
         <section class="bg-light py-5">
             <h2 class="text-center mt-5">Provide us with more details</h2>
+            <hr>
+
 
             <div class="row mt-4 content-box">
               <div class="col-12 col-md-8"> <!-- Changed to col-12 for small screens and col-md-8 for medium and up -->
@@ -31,10 +36,10 @@
                           <div class="col-12 col-md-6 text-center d-flex flex-column justify-content-center">
                             <h1>Attach a picture</h1>
                             <h3>
-                              Please upload clear photos for a quick handyman selection
+                              Please upload clear photos for a quick handyman selection!
                             </h3>
                           </div>
-                          <div class="col-12 col-md-6 text-center d-flex flex-column align-items-center justify-content-between">
+                          <div class="col-12 col-md-6 text-center d-flex flex-column">
                             <div id="imagePreview" class="image-preview mt-3"></div>
                             <input type="file" id="imageUpload" accept="image/*" class="d-none">
                             <button id="uploadButton" class="upload-button mt-3">Upload Image</button>
@@ -47,22 +52,30 @@
                           <div class="col-12 col-md-6 text-center d-flex flex-column justify-content-center">
                             <h1>Choose a Timing</h1>
                             <h3>
-                            Please upload clear photos for a quick handyman selection
+                            When do you need our service?
                             </h3>  
                           </div>
-                          <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column justify-content-center">
-                          <label>
-                            <input type="radio" name="timing" required>
-                            <span class="time-slot"></span>
-                          </label>
-                          <label>
-                            <input type="radio" name="timing" required>
-                            <span class="time-slot"></span>
-                          </label>
-                          <label>
-                            <input type="radio" name="timing" required>
-                            <span class="time-slot"></span>
-                          </label>
+                          <div class="col-12 col-md-6 mt-5 text-center d-flex flex-column ">
+                            <label>
+                              <input type="radio" name="timing" required>
+                              <span class="time-slot"></span>
+                            </label>
+                            <label>
+                              <input type="radio" name="timing" required>
+                              <span class="time-slot"></span>
+                            </label>
+                            <label>
+                              <input type="radio" name="timing" required>
+                              <span class="time-slot"></span>
+                            </label>
+                            <div class="btn-group-vertical" role="group" aria-label="Vertical radio toggle button group">
+                              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio1" autocomplete="off" checked>
+                              <label class="btn btn-outline-danger" for="vbtn-radio1">07:00 to 11:00</label>
+                              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio2" autocomplete="off">
+                              <label class="btn btn-outline-danger" for="vbtn-radio2">12:00 to 16:00</label>
+                              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio3" autocomplete="off">
+                              <label class="btn btn-outline-danger" for="vbtn-radio3">17:00 to 21:00</label>
+                            </div>
                           </div>
                         </div>
                       </div>
