--- a/Frontend/templates/pages/provider.html
+++ b/Frontend/templates/pages/provider.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
+    <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
         <a class="navbar-brand" style="color: white" href="homepage.html">
             <b>Servify</b>
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
