--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -90,6 +90,9 @@
               <a class="btn btn-success submit-button" id="submitButton" href="map.html" disabled><b>I NEED HELP</b></a>
             </div>
           </section>
+          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
+          </div>
     </main>
 
     <footer class="bg-dark text-white">
