--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -179,6 +179,9 @@
                 <a href="./request.html" class="btn btn-success next-button"><b>NEXT</b></a>
             </div>
         </section>
+        <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated " style="width: 25% "></div>
+          </div>
     </main>
 
     <footer class="bg-dark text-white">
