--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -61,6 +61,9 @@
                 </div>
             </div>
         </section>
+        <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated " style="width: 100% "></div>
+          </div>
     </main>
 
     <footer class="bg-dark text-white footer">
