--- a/Frontend/templates/pages/map.html
+++ b/Frontend/templates/pages/map.html
@@ -33,6 +33,9 @@
                 <a href="./confirmation.html" class="btn btn-success confirm-button"><b>Service Provider Arrived</b></a>
               </div>
         </section>
+        <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated " style="width: 75% "></div>
+          </div>
     </main>
 
 
