--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -62,7 +62,7 @@
             </div>
         </section>
         <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar progress-bar-striped progress-bar-animated " style="width: 100% "></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated custom-progress-bar " style="width: 100% "></div>
           </div>
     </main>
 
