--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -91,7 +91,7 @@
             </div>
           </section>
           <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated custom-progress-bar" style="width: 50%"></div>
           </div>
     </main>
 
