--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -180,7 +180,7 @@
             </div>
         </section>
         <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar progress-bar-striped progress-bar-animated " style="width: 25% "></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated custom-progress-bar " style="width: 25% "></div>
           </div>
     </main>
 
