--- a/Frontend/templates/styles/request.css
+++ b/Frontend/templates/styles/request.css
@@ -124,3 +124,6 @@ h1 {
     transform: rotate(360deg);
   }
 }
+.custom-progress-bar {
+  background-color: #0DC7B1; /* Replace #ff5733 with your desired color code */
+}
