--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -20,7 +20,7 @@
     <main>
         <section class="bg-light py-5">
             <h2 class="text-center mt-5">YOU HAVE CONFIRMED THE ORDER!</h2>
-    
+            <hr class="green-line">
             <div class="row mt-4 content-box">
                 <div class="col-md-8">
                     <!-- Confirmation Details Container -->
