--- a/Frontend/templates/pages/map.html
+++ b/Frontend/templates/pages/map.html
@@ -23,7 +23,7 @@
     <main>
         <section class="bg-light py-5">
             <h2 class="text-center mt-5">Your Service Provider is on the way!</h2>
-
+            <hr class="green-line">
             <div class="row mt-4 content-box">
                 <!-- Google Maps Container -->
                 <div id="map"></div>
