--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -24,9 +24,7 @@
     <main>
         <section class="bg-light py-5">
             <h2 class="text-center mt-5">Provide us with more details</h2>
-            <hr>
-
-
+            <hr class="green-line">
             <div class="row mt-4 content-box">
               <div class="col-12 col-md-8"> <!-- Changed to col-12 for small screens and col-md-8 for medium and up -->
                   <!-- Image Upload Container -->
