--- a/Frontend/templates/pages/provider.html
+++ b/Frontend/templates/pages/provider.html
@@ -24,7 +24,7 @@
 <main>
     <section class="bg-light py-5">
         <h2 class="text-center mt-5">Do you want to accept the order?</h2>
-
+        <hr class="green-line">
         <div class="row mt-4 content-box">
           <div class="col-12 col-md-8"> <!-- Changed to col-12 for small screens and col-md-8 for medium and up -->
               <div class="image-upload-container card-like mb-4">  
