--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/services.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
@@ -21,7 +23,8 @@
     <main>
         <section class="bg-light py-5">
 
-            <h2 class="text-center mt-5"> Select your required service </h2>
+            <h2 class="text-center mt-5"> SELECT SERVICE NEEDED </h2>
+            <hr class="green-line">
 
             <div class="row mt-4 content-box">
                 <div class="col-md-3">
