--- a/Frontend/templates/styles/confirmation.css
+++ b/Frontend/templates/styles/confirmation.css
@@ -45,3 +45,11 @@
 .custom-progress-bar {
     background-color: #0DC7B1; /* Replace #ff5733 with your desired color code */
   }
+  .green-line {
+    border: none;
+    background-color:#0DC7B1;
+    height: 4px; /* Adjust the height as needed for thickness */
+    width: 20%; /* Adjust the width as needed for length */
+    margin: 0 auto; /* Center the line horizontally */
+  }
+  
