--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
         <a class="navbar-brand" style="color: white" href="/templates/pages/index.html">
             <b>Servify</b>
-        <img src="images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="/images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
          <form class="ms-auto">
           <a href="/templates/pages/services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
