change file paths

--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Frontend//templates/styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
     
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="Frontend//templates/pages/index.html">
+        <a class="navbar-brand" style="color: white" href="index.html">
             <b>Servify</b>
-        <img src="Frontend/images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
          <form class="ms-auto">
-          <a href="Frontend/templates/pages/services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
+          <a href="services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
         </form>
     </div>
     </nav>  
@@ -28,21 +28,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Frontend/images/pipes.jpg" class="d-block w-100" alt="...">
+            <img src="../../images/pipes.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Connect</h5>
               <p>Beyond Self, Above Service.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="Frontend/images/electrician.jpg" class="d-block w-100" alt="...">
+            <img src="../../images/electrician.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Serve</h5>
               <p>Your Urgency, Our Priority.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="Frontend/images/plumber.jpg" class="d-block w-100" alt="...">
+            <img src="../../images/plumber.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Sustain</h5>
               <p>Sustaining Homes, Enriching Community.</p>
@@ -80,7 +80,7 @@
               <p> For enquiries about our services, please contact our Chief of Operations Howell Chan at <u>howellchan@servify.com</u></p>
             </div>
             <div class="col-md-6 content-box" style="background-color: #ffffff;">
-              <img src="Frontend/images/handyman2.jpg" alt="" class="img-fluid rounded">
+              <img src="../../images/handyman2.jpg" alt="" class="img-fluid rounded">
             </div>
           </div>
 
