change file paths back

--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -16,7 +16,7 @@
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
          <form class="ms-auto">
-          <a href="services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
+          <a href="./services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
         </form>
     </div>
     </nav>  
