--- a/Frontend/templates/styles/provider.css
+++ b/Frontend/templates/styles/provider.css
@@ -27,6 +27,9 @@ h1 {
   width: 20%; /* Adjust the width as needed for length */
   margin: 0 auto; /* Center the line horizontally */
 }
+h2{
+  font-family: 'Poppins', sans-serif;
+}
 
 
 
