--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -13,10 +13,10 @@
     <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
         <a class="navbar-brand" style="color: white" href="index.html">
             <b>Servify</b>
-        <img src="./Frontend/images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="Frontend/images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
          <form class="ms-auto">
-          <a href="./services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
+          <a href="Frontend/images/services.html" class="btn btn-outline-success service-btn"><b>Services</b></a>
         </form>
     </div>
     </nav>  
@@ -28,7 +28,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./Frontend/images/pipes.jpg" class="d-block w-100" alt="...">
+            <img src="./pipes.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Connect</h5>
               <p>Beyond Self, Above Service.</p>
