--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -77,7 +77,7 @@
               </ul>
               <hr class="my-4">
               <h3 class="mt-4">Further Enquiries</h3>
-              <p> For enquiries about our services, please contact our Chief of Operations Howell Chan at <u>howellchan@servify.com</u></p>
+              <p> For enquiries about our services, please contact us at <u>howellchan@servify.com</u></p>
             </div>
             <div class="col-md-6 content-box" style="background-color: #ffffff;">
               <img src="../../images/handyman2.jpg" alt="" class="img-fluid rounded">
