--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
+    <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
         <a class="navbar-brand" style="color: white" href="./index.html">
             <b>Servify</b>
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -184,7 +184,6 @@
         </section>
         <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
             <div class="progress-bar progress-bar-striped progress-bar-animated custom-progress-bar " style="width: 25% "></div>
-          </div>
     </main>
 
     <footer class="bg-dark text-white">
